[tool.poetry]
name = "minibrowser"
version = "0.1.0"
description = ""
authors = ["Tamerlan Salkenov <catamana@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pywebview = "^5.3.2"
qtpy = "^2.4.2"
pyqt5-tools = "^5.15.9.3.3"
pyqtwebengine = "^5.15.7"
psycopg = "^3.2.3"
psycopg-binary = "^3.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
